payment-service: update PaymentServiceImpl